Made Submit Button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <form id="inputContainer">
           <label for="searchWord">Giphy Search:</label>
           <input style="margin: 2rem" type="text" id="searchWord" />
-          <button id="submitSearch">Giphy by Search</button>
+          <button id="submitSearch">Submit</button>
         </form>
 
         <div id="imageContainer" style="max-width: 680px">
